# CudaTest

./: CMakeLists.txt  test.cu
